# StarGazer

./: .gitignore  LICENSE
client/: background.js  index.js  manifest.json  package.json  style.css
client/data/: background.js  style.css
server/: Cargo.toml
server/data/: schema.sql
server/src/: collector.rs  distributor.rs  starevent.rs  util.rs
